// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MessageTimestampView > renders the message timestamp in default state 1`] = `
<div>
  <span
    aria-live="off"
    class="content"
    tabindex="0"
  >
    04:58
  </span>
</div>
`;

exports[`MessageTimestampView > renders the message timestamp with href 1`] = `
<div>
  <a
    aria-live="off"
    class="content"
    href="~"
  >
    04:58
  </a>
</div>
`;
